Updated Tests for chemkin and manual files

--- a/manual/model_notebook.ipynb
+++ b/manual/model_notebook.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "The library `chemkin` is a simple library for handling such chemical reaction systems. A system of chemical reactions are input in a standard XML format and the library computes the reaction rates and progress rate of these reactions, based on the parameters passed in the XML. \n",
     "\n",
-    "In a system of $N$ species undergoing $M$ **irreversible**, **elementary** reactions, the reaction rate of species $i$ is computed by - \n",
+    "In a system of $N$ species undergoing $M$ **elementary** reactions, the reaction rate of species $i$ is computed by - \n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -22,11 +22,29 @@
     "The progress rate for each reaction is computed by \n",
     "$$\n",
     "\\begin{align}\n",
-    "  \\omega_{j} &= k_{j}\\prod_{i=1}^{N}{x_{i}^{\\nu_{ij}^{\\prime}}}, \\qquad j = 1, \\ldots, M\n",
+    "  \\omega_{j} &= k_{j}^{\\left(f\\right)}\\prod_{i=1}^{N}{x_{i}^{\\nu_{ij}^{\\prime}}} - k_{j}^{\\left(b\\right)}\\prod_{i=1}^{N}{x_{i}^{\\nu_{ij}^{\\prime\\prime}}}, \\qquad j = 1,\\ldots, M\n",
+    "\\end{align}\n",
+    "$$\n",
+    "where,\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "  k_{j}^{\\left(b\\right)} &= \\frac{k_{j}^{\\left(f\\right)}}{k_{j}^{e}}, \\qquad j =1, \\ldots, M\\\\\n",
+    "  k_{j}^{e} &= \\left(\\frac{p_{0}}{RT}\\right)^{\\gamma_{j}}\\exp\\left(\\frac{\\Delta S_{j}}{R} - \\frac{\\Delta H_{j}}{RT}\\right), \\qquad j =1, \\ldots, M\\\\\n",
+    "  \\gamma_{j} &= \\sum_{i=1}^{N}{\\nu_{ij}}\\\\\n",
+    "  \\Delta S_{j} &= \\sum_{i=1}^{N}{\\nu_{ij}S_{i}} \\quad \\textrm{and} \\quad \\Delta H_{j} = \\sum_{i=1}^{N}{\\nu_{ij}H_{i}}, , \\qquad j =1, \\ldots, M\\\\\n",
+    "  H_{i} &= \\int_{T_{0}}^{T}{C_{p,i}\\left(T\\right) \\ \\mathrm{d}T}, \\qquad i = 1, \\ldots, N \\\\\n",
+    "  S_{i} &= \\int_{T_{0}}^{T}{\\frac{C_{p,i}\\left(T\\right)}{T} \\ \\mathrm{d}T}, \\qquad i = 1, \\ldots, N\\\\\n",
+    "  C_{p,i} &= \\left(\\sum_{k=1}^{5}{a_{ik}T^{k-1}}\\right)R, \\qquad i = 1, \\ldots, N\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "where,\n",
+    "The $7$th order NASA polynomials are given by \n",
+    "$$\\frac{C_{p,i}}{R} = a_{i1} + a_{i2}T + a_{i3}T^{2} + a_{i4}T^{3} + a_{i5}T^{4}$$\n",
+    "$$\\frac{H_{i}}{RT} = a_{i1} + \\frac{1}{2}a_{i2}T + \\frac{1}{3}a_{i3}T^{2} + \\frac{1}{4}a_{i4}T^{3} + \\frac{1}{5}a_{i5}T^{4} + \\frac{a_{i6}}{T}$$\n",
+    "$$\\frac{S_{i}}{R} = a_{i1}\\ln\\left(T\\right) + a_{i2}T + \\frac{1}{2}a_{i3}T^{2} + \\frac{1}{3}a_{i4}T^{3} + \\frac{1}{4}a_{i5}T^{4} + a_{i7}$$\n",
+    "for $i = 1,\\dots, N$.\n",
+    "\n",
+    "Notation:\n",
     "\n",
     "$\\nu_{ij}^{\\prime}$ : Stoichiometric coefficients of reactants,\n",
     "\n",
@@ -36,8 +54,19 @@
     "\n",
     "$x_{i}$ : Concentration of specie $i$,\n",
     "\n",
-    "$k_{j}$ : Reaction rate coefficient for reaction $j$ \n",
+    "$k_{j}^{\\left(f\\right)}$: forward reaction rate coefficient for reaction $j$,\n",
     "\n",
+    "$k_{j}^{\\left(b\\right)}$: backward reaction rate coefficient for reaction $j$,\n",
+    "\n",
+    "$k_{j}^{e}$: *equilibrium coefficient* for reaction $j$,\n",
+    "\n",
+    "$p_{0}$: pressure of the reactor (usually $10^{5}$ Pa),\n",
+    "\n",
+    "$\\Delta S_{j}$: the entropy change of reaction $j$,\n",
+    "\n",
+    "$\\Delta H_{j}$: the enthalpy change of reaction $j$,\n",
+    "\n",
+    "$C_{p,i}$: specific heat at constant pressure (given by the NASA polynomial)\n",
     "\n",
     "The clients could call the chemkin package and obtained the right-hand-side of an ODE. They can then use it as the righ-hand-side of the ODE, or in a neural net code to learn new reaction pathways.\n",
     " \n",
@@ -114,11 +143,12 @@
     "This class has five methods, and two special methods:\n",
     " - `__repr__`: Returns a string containing basic information for the reaction system\n",
     " - `__len__`: Returns the number of species in the reaction system\n",
-    " - `calculate_progress_rate(concs, temperature)`: Returns the progress rate of a system of irreversible, elementary reactions\n",
-    " - `calculate_reaction_rate(concs, temperature)`: Returns the reaction rate of a system of irreversible, elementary reactions\n",
+    " - `calculate_progress_rate(concs, temperature)`: Returns the progress rate of a system of elementary reactions\n",
+    " - `calculate_reaction_rate(concs, temperature)`: Returns the reaction rate of a system of elementary reactions\n",
     " - `get_rate_coefficients()`: Calculate reaction rate coefficients\n",
     " - `build_reactant_coefficient_matrix()`: Build a reactant coefficients matrix for the reaction system\n",
     " - `build_product_coefficient_matrix()`: Build a product coefficients matrix for the reaction system\n",
+    " - `check_reversible`: Check if each elementary reaction is reversible\n",
     "\n",
     "Example:\n",
     "```python\n",
@@ -131,6 +161,15 @@
     "reaction_system[0].calculate_reaction_rate(concs, 300)\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -149,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
