--- a/manual/model_notebook.ipynb
+++ b/manual/model_notebook.ipynb
@@ -93,7 +93,9 @@
     "```\n",
     "`reaction_systems` is a list containing multiple `ReactionSystem` instances. The length of `reaction_systems` is the number of reaction systems, and the length of each list element is the number of reactions in a reaction system.\n",
     "\n",
+    "\n",
     "#### `ElementaryReaction` class: Class for each elementary reaction\n",
+    "\n",
     "Takes a dictionary of properties from the XMLReader class for each elementary reaction. Calculates the rate coefficient for each elementary reaction and passes it to the ReactionSystem class. It also returns a dictionary of recatants and products to the ReactionSystem class.\n",
     "\n",
     "This class has thee public methods, two private methods a special method:\n",
@@ -120,21 +122,14 @@
     "\\end{align}\n",
     "$$\n",
     " \n",
-    "\n",
     "Example:\n",
-    "\n",
     "```python\n",
     "elementary_reaction = ElementaryReaction(reaction_properties)\n",
     "reactants = elementary_reaction.get_reactants()\n",
     "products = elementary_reaction.get_products()\n",
     "rate_coeff = elementary_reaction.calculate_rate_coefficient(1000)\n",
     "repr(elementary_reaction)\n",
-    " ```\n",
-    " \n",
-    "\n",
-    " \n",
-    "\n",
-    "\n",
+    "```\n",
     "\n",
     "#### `ReactionSystem` class: Class for a system of reactions\n",
     "\n",
@@ -159,7 +154,59 @@
     "print(reaction_system[0])\n",
     "reaction_system[0].calculate_progress_rate(concs, 300)\n",
     "reaction_system[0].calculate_reaction_rate(concs, 300)\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "#### `Thermochem` class: Class for calculating the backward reaction rate\n",
+    "\n",
+    "Construct with Rxnset class object, the default pressure of the reactor and the default ideal gas constant. The values of pressure of the reactor and ideal gas constant can be changed. It calculates backward reaction rate using the temperature passed into the functions and the corresponding NASA polynomial coefficients.\n",
+    "\n",
+    "This class has four methods:\n",
+    " - `Cp_over_R(T)`: Returns specific heat of each species given by the NASA polynomials\n",
+    " - `H_over_RT(T)`: Returns the enthalpy of each species given by the NASA polynomials\n",
+    " - `S_over_R(T)`: Returns the entropy of each species given by the NASA polynomials\n",
+    " - `backward_coeffs(kf, T)`: Returns the backward reaction rate coefficient for reach reaction\n",
+    "\n",
+    "Example:\n",
+    "```python\n",
+    "reader = chemkin.XMLReader(\"tests/rxns_reversible.xml\")\n",
+    "reaction_system = reader.get_reaction_systems()[0]\n",
+    "nu = reaction_system.product_coefficients - reaction_system.reactant_coefficients\n",
+    "rxnset = thermodynamics.Rxnset(reaction_system.species, nu)\n",
+    "thermo =  thermodynamics.Thermochem(rxnset)\n",
+    "thermo.Cp_over_R(800)\n",
+    "thermo.H_over_RT(800)\n",
+    "thermo.S_over_R(800)\n",
+    "kf = reaction_system.get_rate_coefficients(800)\n",
+    "thermo.backward_coeffs(kf, 800)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### `Rxnset` class: Read and store NASA polynomial coefficients \n",
+    "\n",
+    "This class reads the NASA polynomial coefficients for all species in the reaction system from the SQL database which contains coefficients for all species. It stores the coefficients and temperature ranges in a dictionary of dictionaries where the name of species is the key. For each reaction system, the class just need to read from the database once, and check the range the given temperature is in every time the temperature of the reaction system changes afterwards. If the `get_nasa_coefficients` function is called twice for the same reaction system and the same temperature, the cached value is returned.\n",
+    "\n",
+    " This class has two methods:\n",
+    " - `get_nasa_coefficients(T)`: Returns the corresponding NASA polynomial coefficients for all species at the given temperature\n",
+    " - `read_nasa_coefficients()`: Return NASA polynomial coefficients for all species involved in the reaction system\n",
+    "\n",
+    "Example:\n",
+    "```python\n",
+    "reader = chemkin.XMLReader(\"tests/rxns_reversible.xml\")\n",
+    "reaction_system = reader.get_reaction_systems()[0]\n",
+    "nu = reaction_system.product_coefficients - reaction_system.reactant_coefficients\n",
+    "rxnset = thermodynamics.Rxnset(reaction_system.species, nu)\n",
+    "rxnset.get_nasa_coefficients(800)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### `memoized` class: Caches a function's return value each time it is called\n",
+    "\n",
+    "Decorator class. Caches a function's return value each time it is called. If called later with the same arguments, the cached value is returned (not reevaluated).\n",
+    "\n",
+    "This class has three special methods:\n",
+    " - `__call__(*args)`: Cached a function's return value\n",
+    " - `__repr__`: Return the function's docstring\n",
+    " - `__get__(obj, objtype)`: Support instance methods\n"
    ]
   },
   {
