--- a/manual/model_notebook.ipynb
+++ b/manual/model_notebook.ipynb
@@ -73,6 +73,20 @@
     "\n",
     "## 2. Installation\n",
     "You can obtain the `chemical_kientics` Library [here](https://github.com/cs207-2017-group13/cs207-FinalProject).\n",
+    "### Installation instructions\n",
+    "Obtain the latest version from github, change to the directory, and install using pip.\n",
+    "\n",
+    "    git clone https://github.com/cs207-2017-group13/cs207-FinalProject.git\n",
+    "\tcd cs207-FinalProject\n",
+    "\n",
+    "\t# Either\n",
+    "\tpip3 install ./\n",
+    "\t# or alternatively\n",
+    "\tpip3 install -e ./\n",
+    "\n",
+    "The latter install command invokes \"editable\" mode. Package files will not be copied to your Python package directory, and source files may be edited from the installation directory.\n",
+    "\n",
+    "### Testing\n",
     "Users can run the test suite by calling pytest from the main directory, i.e. \n",
     "\n",
     "    pytest --cov=src\n",
@@ -80,7 +94,7 @@
     "\n",
     "\n",
     "## 3. Basic Usage and Examples\n",
-    "#### `XMLReader` class: Read and parse XML input file\n",
+    "### `XMLReader` class: Read and parse XML input file\n",
     "\n",
     "The user should have an XML input file containing all the chemical reactions. `XMLReader` will read in the file and parse the file with the `xml.etree` library. It will output a list of dictionaries containing all the elements needed to calculate reaction rate coefficients, progress rates and reaction rates. It will create `ElementaryReaction` objects inside the `get_reaction_systems` function, and then put all `ElementaryReaction` objects in a reaction system into a list. It will then create `ReactionSystem` objects.\n",
     "\n",
@@ -94,7 +108,7 @@
     "`reaction_systems` is a list containing multiple `ReactionSystem` instances. The length of `reaction_systems` is the number of reaction systems, and the length of each list element is the number of reactions in a reaction system.\n",
     "\n",
     "\n",
-    "#### `ElementaryReaction` class: Class for each elementary reaction\n",
+    "### `ElementaryReaction` class: Class for each elementary reaction\n",
     "\n",
     "Takes a dictionary of properties from the XMLReader class for each elementary reaction. Calculates the rate coefficient for each elementary reaction and passes it to the ReactionSystem class. It also returns a dictionary of recatants and products to the ReactionSystem class.\n",
     "\n",
@@ -131,7 +145,7 @@
     "repr(elementary_reaction)\n",
     "```\n",
     "\n",
-    "#### `ReactionSystem` class: Class for a system of reactions\n",
+    "### `ReactionSystem` class: Class for a system of reactions\n",
     "\n",
     "Takes a list of ElementaryReaction instances and a list of species. Builds stoichiometric coefficient matrices for the reactants and products and calculates the corresponding progress rates and reaction rates.\n",
     "\n",
@@ -156,7 +170,7 @@
     "reaction_system[0].calculate_reaction_rate(concs, 300)\n",
     "```\n",
     "\n",
-    "#### `Thermochem` class: Class for calculating the backward reaction rate\n",
+    "### `Thermochem` class: Class for calculating the backward reaction rate\n",
     "\n",
     "Construct with Rxnset class object, the default pressure of the reactor and the default ideal gas constant. The values of pressure of the reactor and ideal gas constant can be changed. It calculates backward reaction rate using the temperature passed into the functions and the corresponding NASA polynomial coefficients.\n",
     "\n",
@@ -181,7 +195,7 @@
     "```\n",
     "\n",
     "\n",
-    "#### `Rxnset` class: Read and store NASA polynomial coefficients \n",
+    "### `Rxnset` class: Read and store NASA polynomial coefficients \n",
     "\n",
     "This class reads the NASA polynomial coefficients for all species in the reaction system from the SQL database which contains coefficients for all species. It stores the coefficients and temperature ranges in a dictionary of dictionaries where the name of species is the key. For each reaction system, the class just need to read from the database once, and check the range the given temperature is in every time the temperature of the reaction system changes afterwards. If the `get_nasa_coefficients` function is called twice for the same reaction system and the same temperature, the cached value is returned.\n",
     "\n",
@@ -199,7 +213,7 @@
     "```\n",
     "\n",
     "\n",
-    "#### `memoized` class: Caches a function's return value each time it is called\n",
+    "### `memoized` class: Caches a function's return value each time it is called\n",
     "\n",
     "Decorator class. Caches a function's return value each time it is called. If called later with the same arguments, the cached value is returned (not reevaluated).\n",
     "\n",
