--- a/manual/model_notebook.ipynb
+++ b/manual/model_notebook.ipynb
@@ -220,7 +220,50 @@
     "This class has three special methods:\n",
     " - `__call__(*args)`: Cached a function's return value\n",
     " - `__repr__`: Return the function's docstring\n",
-    " - `__get__(obj, objtype)`: Support instance methods\n"
+    " - `__get__(obj, objtype)`: Support instance methods\n",
+    "\n",
+    "\n",
+    "### `ODE_solver` class: Solve ordinary differential equation with three methods\n",
+    "\n",
+    "Implemented three ode solvers: backward euler method, Runge-Kutta-Fehlberg, and backward differentiation formula. Backward euler method and backward differentiation formula can be used to solve stiff ODE problems, while Runge-Kutta-Fehlberg moethod is more accurate for non-stiff problems. For the purposed of solving ODE problems in chemical kinetics, our default method is backward differentiation formula.\n",
+    "\n",
+    "This class has five methods:\n",
+    " - `backward_euler()`: Solve the ODE using backward euler method. \n",
+    " - `backward_euler_step()`: Solve the ODE one step/time forward using backward euler method. We use fixed point iterations to find the optimal root.\n",
+    " - `rk45()`: Solve the ODE using Runge-Kutta-Fehlberg method.\n",
+    " - `rk45_step()`: Solve the ODE one step/time forward using Runge-Kutta-Fehlberg method.\n",
+    " - `BDF()`: Solve the ODE using backward differentiation formula.\n",
+    "\n",
+    "Example:\n",
+    "```python\n",
+    "func = lambda t, y: 2*t\n",
+    "obj = ODE_solver(func, 0.8, [1, 2], 0.1)\n",
+    "obj.backward_euler()\n",
+    "obj.backward_euler_step()\n",
+    "obj.rk45()\n",
+    "obj.rk45_step()\n",
+    "obj.BDF()\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### `DeterministicSimulator` class: Class for deterministic simulation\n",
+    "\n",
+    "This class is inherited from the `ReactionSimulator` class. It simulate species abundances deterministically.\n",
+    "\n",
+    "This class has two methods:\n",
+    " - simulate(method='bdf', epsilon = 1e-06): We implemented three methods to solve the ordinary differential equation. Backward differentiation formula and backward eulerare good for stiff functions, and rk45 is accurate for non-stiff functions. BDF is the most suitable for solving ODE problems in chemical kinetics, so our default method is set as BDF.\n",
+    " - diff_func(t, y): In order for the ode solver to work, we need a function with t (time) and y as parameters. However, the original calculate reaction rate function is a function of y and temperature. We need to transform the original function.\n",
+    "\n",
+    "Example:\n",
+    "```python\n",
+    "import chemkin.chemkin as chemkin\n",
+    "import chemkin.simulator as simulator\n",
+    "concs = np.array([1., 2., 1., 3., 1.])*1e-05\n",
+    "reader = chemkin.XMLReader(\"tests/rxns.xml\")\n",
+    "reaction_system = reader.get_reaction_systems()[0]\n",
+    "det_sim = simulator.DeterministicSimulator(reaction_system, concs, 800, [0, 1], dt=0.01)\n",
+    "det_sim.simulate()\n",
+    "```"
    ]
   },
   {
