Model manul updated

--- a/manual/model_notebook.ipynb
+++ b/manual/model_notebook.ipynb
@@ -70,14 +70,37 @@
     "\n",
     "The clients could call the chemkin package and obtained the right-hand-side of an ODE. They can then use it as the righ-hand-side of the ODE, or in a neural net code to learn new reaction pathways.\n",
     " \n",
+    "We offered two options for the user after obtaining the right-hand-side of an ODE. The user could choose to solve the ODE with the deterministic simulator or simulate the abundances of all species using the stochastic simulator. The simulation result will be presented by plots showing the trajectories of species abundances over time.\n",
+    "\n",
+    "For deterministic simulator, we implemented three ODE solvers, backward euler method, backward differentiation formula and Runge-Kutta-Fehlberg method. To solve ODE problems in chemical kinetics, however, Runge-Kutta-Fehlberg method (rk45) is NOT recommended as the functions we are dealing with are usually stiff. It is recommended that the user sets the step size to be small (eg. 0.01) to achieve higher simulation accuracy when using the backward euler method and the backward differentiation. If the abundances of species become negative in the simulation process, the simulation will raise a `ValueError` and stop as abundances should never be negative. \n",
+    "\n",
+    "For stochastic simulator, we implemented the Gillespie algorithm. The principle behind the algorithm is that waiting times between reaction events are exponentially distributed; thus the time until the next reaction is drawn from an exponential distribution (the simulation is advanced in time by this amount). The particular reaction event that occurs is randomly selected from among the possible reactions in proportion to their probabilities.\n",
+    "\n",
+    "The following is a summary of the simulation process:\n",
+    "1. Generate two random numbers $r_{1}$, $r_{2}$ uniformly distribution in (0,1).\n",
+    "2. Compute the propensity function of each reaction and compute\n",
+    "   $$ \\alpha_0 = \\sum_{i=1}^{q} \\alpha_{i}(t) $$\n",
+    "3. Compute the time interval until the next chemical reaction via\n",
+    "   $$ \\tau = \\frac{1}{\\alpha_{0}}ln[1/r_{1}] $$\n",
+    "4. Compute which reaction occurs. Find j such that\n",
+    "   $$ r_{2} \\geq \\frac{1}{\\alpha_{0}} \\sum_{i=1}^{j-1} \\alpha_{i} $$\n",
+    "   $$ r_{2} < \\frac{1}{\\alpha_{0}} \\sum_{i=1}^{j} \\alpha_{i} $$\n",
+    "5. The $j$th reaction takes place. Update the numbers of chemical species accordingly.\n",
+    "6. Continue simulation by returning to step 1.\n",
+    "\n",
+    "To elaborate, the propensity function for a chemical reaction describes the probability of a particular reaction happening. For instance, consider the following bimolecular reaction:\n",
+    " $$ A + A \\rightarrow B;\\quad rate\\;k \\qquad(1) $$\n",
+    "The quantity of species `A` present at time `t` is given by `A(t)`. The propensity function for the above reaction is $A(t)(A(t)-1)k$. In a more complex reaction system, each elementary reaction will have its own propensity, and it is necessary to calculate the propensity of all\n",
+    "elementary reactions in order to find the total \"propensity\" for a reaction to occur, in order to draw time $\\tau$ until the next reaction from an exponential distribution.\n",
     "\n",
     "## 2. Installation\n",
-    "You can obtain the `chemical_kientics` Library [here](https://github.com/cs207-2017-group13/cs207-FinalProject).\n",
+    "You can obtain the `chemical_kinetics` Library [here](https://github.com/cs207-2017-group13/cs207-FinalProject).\n",
+    "\n",
     "### Installation instructions\n",
     "Obtain the latest version from github, change to the directory, and install using pip.\n",
     "\n",
     "    git clone https://github.com/cs207-2017-group13/cs207-FinalProject.git\n",
-    "\tcd cs207-FinalProject\n",
+    "\t  cd cs207-FinalProject\n",
     "\n",
     "\t# Either\n",
     "\tpip3 install ./\n",
@@ -91,6 +114,10 @@
     "\n",
     "    pytest --cov=src\n",
     "\n",
+    "### Dependencies\n",
+    "Our package depends on `scipy`, `numpy`, `xml`, and `matplotlib` packages.\n",
+    "\n",
+    "### Contributing to the development version\n",
     "\n",
     "\n",
     "## 3. Basic Usage and Examples\n",
